--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,9 +1,10 @@
 .Main {
-  background-color: #0edb;
+  background-color: #121b28;
   width: 100%;
   align-items: center;
   justify-content: center;
   display: flex;
+  box-shadow: 21px 21px 20px -1px #fff;
 
   .header {
     flex-direction: row;
@@ -26,16 +27,20 @@
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
+      .item-text{
+        color: #Fff
+      }
       .item-text:hover {
         color: red;
+        transition:0.6s;
       }
     }
   }
   .nav-mobile-view {
     position: fixed;
-    top: 65px;
+    top: 65.2px;
     width: 100%;
-    background-color: #10044a;
+    background-color: #121b28;
     height: 800px;
     left: 0;
     transition: 0.7s ease;
@@ -43,6 +48,16 @@
     z-index: 99;
     &.menu-visible {
       transform: translateY(0%);
+    }
+    .mobilecontent{
+      // align-items: center;
+      justify-content:center;
+      display: flex;
+      flex-direction: column;
+      .text{
+        padding: 10px;
+        color: #fff;
+      }
     }
   }
   .menu {
@@ -61,7 +76,7 @@
       display: flex;
     }
     .search {
-      margin-left: 125px;
+      display: none;
     }
     .nav-mobile-view {
       margin-top: 40px;
