--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -1,13 +1,15 @@
 .slider-container {
   width: 100%;
   margin: 0 auto;
+  margin-top: 100px;
+
   .slider-box {
     display: flex;
     // width: 330px;
     height: 220px;
     margin: 12px;
     flex-direction: column;
-    background-color: whitesmoke;
+    background-color: #1d1e1f;
     border-radius: 20px;
     object-fit: cover;
     box-shadow: -1px 1px 16px -1px rgba(0, 0, 0, 0.2);
@@ -22,40 +24,45 @@
       justify-content: space-between;
       display: flex;
       align-items: center;
+
       //   background-color: red;
       .match-number {
-        color: #000;
+        color: #fff;
         font-size: 17px;
       }
     }
 
     .preview-view {
-      // background-color: #000;
+      background-color: skyblue;
       border-width: 1px;
-      border: 1px solid #000;
+      // border: 1px solid #fff;
       height: 25px;
       padding: 1px 6px;
       border-radius: 5px;
       align-items: center;
       justify-content: center;
       display: flex;
+
       .preview-text {
         color: #000;
       }
     }
+
     .complated-view {
-      background-color: #000;
-      // border: 1px solid #000;
+      background-color: orange;
+      // border: 1px solid #fff;
       height: 25px;
       padding: 1px 6px;
       border-radius: 5px;
       align-items: center;
       justify-content: center;
       display: flex;
+
       .complated-text {
-        color: #fff;
+        color: #000;
       }
     }
+
     .live-view {
       background-color: red;
       height: 25px;
@@ -64,10 +71,12 @@
       align-items: center;
       justify-content: center;
       display: flex;
+
       .live-text {
         color: #fff;
       }
     }
+
     .middle-section {
       width: 80%;
       height: 50%;
@@ -78,32 +87,42 @@
       display: flex;
       //  background-color: #eee;
     }
+
     .left-team {
       .top-view {
         flex-direction: row;
         display: flex;
         align-items: center;
       }
+
       .hometeam-logo {
         height: 25px;
         width: 40px;
         border-radius: 5px;
         margin-right: 5px;
       }
+
+      .team-name {
+        color: #fff;
+      }
+
       .scored-section-team-a {
         // background-color: red;
         margin: 20px auto;
-        color: #000;
+        color: #fff;
+
         .scored {
           flex-direction: row;
           display: flex;
         }
+
         .over {
           margin-top: 5px;
-          color: #000;
+          color: #fff;
         }
       }
     }
+
     .right-team {
       .right-section {
         justify-content: space-between;
@@ -111,27 +130,37 @@
         display: flex;
         align-items: center;
       }
+
       .hometeam-logo {
         height: 25px;
         width: 40px;
         border-radius: 5px;
         margin-left: 5px;
+
       }
+
+      .team-name {
+        color: #fff;
+      }
+
       .scored-section-team-b {
         // background-color: red;
         margin: 20px 5px 10px 1px;
-        color: #000;
+        color: #fff;
+
         .scored {
           margin-left: 35px;
           flex-direction: row;
           display: flex;
         }
+
         .over {
           margin-top: 5px;
-          color: #000;
+          color: #fff;
         }
       }
     }
+
     .preview-section {
       width: 80%;
       height: 57%;
@@ -142,24 +171,29 @@
       display: flex;
       // background-color: red;
     }
+
     .bottom-section {
       width: 80%;
+      height: 5%;
+      margin-bottom: 10px !important;
       margin: 0 auto;
       align-items: center;
       justify-content: center;
       display: flex;
-      background-color: #eee;
-      height: 30px;
+      // background-color: #eee;
+      // height: 30px;
       border-radius: 5px;
+
       .result-text {
         text-align: center;
         overflow: hidden;
         display: inline-block;
         text-overflow: ellipsis;
         white-space: nowrap;
-        color: #000;
+        color: #fff;
       }
     }
+
     .middle {
       display: flex;
       align-items: center;
@@ -179,18 +213,20 @@
         height: 25px;
         width: 25px;
         border-radius: 50%;
-        background-color: #000;
-        color: #fff;
+        background-color: #fff;
+        color: #000;
         font-size: 13px;
         font-weight: 700;
         z-index: 1000;
       }
     }
   }
+
   .slider-box:hover {
     transform: scale(1.05);
     transition: all 0.5s;
   }
+
   a {
     text-decoration: none;
   }
