--- a/src/Screens/Home.scss
+++ b/src/Screens/Home.scss
@@ -1,36 +1,69 @@
-.main-container{
-    padding: 10px 55px 10px 55px;
+.main-container {
+  padding: 10px 55px 10px 55px;
+  background-color: #000;
+  .fillter-container {
+    margin-left: 30px;
+    margin-top: 80px;
+    margin-bottom: -80px;
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    // background-color: red;
+    width: 30%;
+  }
+  .button {
+    padding: 5px 10px 5px 10px;
+    border-radius: 5px;
+    width: fit-content;
     background-color: #000;
-    .bottom-section{
-        flex-direction: row;
-        display: flex;
-        justify-content:space-between;
-        padding: 20px;
-        // background-color: yellow;
-        .first-section{
-           width: 23%;
-        //    background-color:grey;
-        //    height: 600px;
-           border-radius: 10px;
-           justify-content: center;
-           display: flex;
-           color: #fff;
-        }
-        .middle-section{
-            width: 50%;
-            // background-color:grey;
-            border-radius: 10px;
-            justify-content: center;
-            display: flex;
-            color: #fff;
-        }
-        .last-section{
-            width: 23%;
-        //    background-color:grey;
-           border-radius: 10px;
-           justify-content: center;
-           display: flex;
-           color: #fff;
-        }
+    color: #fff;
+    border: 1px solid #fff;
+    width: 90px;
+  }
+  .button:hover {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+  }
+  .bottom-section {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    // background-color: yellow;
+    .first-section {
+      width: 23%;
+      //    background-color:grey;
+      //    height: 600px;
+      border-radius: 10px;
+      justify-content: center;
+      display: flex;
+      color: #fff;
     }
+    .middle-section {
+      width: 50%;
+      // background-color:grey;
+      border-radius: 10px;
+      justify-content: center;
+      display: flex;
+      color: #fff;
+    }
+    .last-section {
+      width: 23%;
+      //    background-color:grey;
+      border-radius: 10px;
+      justify-content: center;
+      display: flex;
+      color: #fff;
+    }
+  }
+}
+@media (max-width: 1024px) {
+  .main-container {
+    .fillter-container {
+      // background-color: red;
+      margin-top: 125px;
+      width: 50%;
+    }
+  }
 }
