--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,9 +3,9 @@
   background-color: #1d1e1f;
   width: 100%;
   align-items: center;
+  max-width: 2100px;
   justify-content: center;
   display: flex;
-  // box-shadow: 21px 21px 20px -1px #fff;
   position: fixed;
   z-index: 100;
   
