--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -34,7 +34,7 @@
     .preview-view {
       background-color: skyblue;
       border-width: 1px;
-      // border: 1px solid #fff;
+      border: 1px solid #fff;
       height: 25px;
       padding: 1px 6px;
       border-radius: 5px;
@@ -49,7 +49,6 @@
 
     .complated-view {
       background-color: orange;
-      // border: 1px solid #fff;
       height: 25px;
       padding: 1px 6px;
       border-radius: 5px;
@@ -119,6 +118,7 @@
           margin-top: 5px;
           color: #fff;
         }
+
         .over {
           margin-top: 5px;
           color: #fff;
