--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -195,6 +195,14 @@
         white-space: nowrap;
         color: #fff;
       }
+      .live-result-text{
+        text-align: center;
+        overflow: hidden;
+        display: inline-block;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        color: red;
+      }
     }
 
     .middle {
