--- a/src/Screens/MatchDetails.scss
+++ b/src/Screens/MatchDetails.scss
@@ -1,7 +1,21 @@
 .matchdetails {
-    margin-top: 70px;
-    position: absolute;
-    @media (max-width: 1024px) {
-       margin-top: 105px;
-      }
+  margin-top: 67px;
+  position: absolute;
+  width: 100%;
+  flex-direction: column;
+   background-color: red;
+  max-width: 1900px;
+  display: flex;
+  align-items: center;
+  @media (max-width: 1024px) {
+    margin-top: 69px;
+  }
+  .match-header{
+    height: 250px;
+    background-color:yellow;
+    // align-items: center;
+    // display: flex;
+    // justify-content: center;
+    width:50%
+  }
 }
