--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -8,7 +8,8 @@
   display: flex;
   position: fixed;
   z-index: 100;
-  
+  // box-shadow: -1px 1px 20px -1px hsl(0deg 0% 100% / 30%);
+
 
   .header {
     flex-direction: row;
@@ -17,29 +18,35 @@
     width: 91%;
     padding: 5px;
     align-items: center;
+
     .image {
       height: 55px;
       width: 55px;
       cursor: pointer;
     }
   }
+
   .middle-content {
     width: 60%;
+
     .middle-option {
       flex-direction: row;
       display: flex;
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
-      .item-text{
+
+      .item-text {
         color: #Fff
       }
+
       .item-text:hover {
         color: red;
-        transition:0.6s;
+        transition: 0.6s;
       }
     }
   }
+
   .nav-mobile-view {
     position: fixed;
     top: 65.2px;
@@ -50,40 +57,49 @@
     transition: 0.7s ease;
     transform: translateY(-120%);
     z-index: 99;
+
     &.menu-visible {
       transform: translateY(0%);
     }
-    .mobilecontent{
+
+    .mobilecontent {
       // align-items: center;
-      justify-content:center;
+      justify-content: center;
       display: flex;
       flex-direction: column;
-      .text{
+
+      .text {
         padding: 10px;
         color: #fff;
       }
     }
   }
+
   .menu {
     display: none;
   }
 }
+
 @media (max-width: 1024px) {
   .Main {
     height: 70px;
+
     .middle-content {
       .middle-option {
         display: none;
       }
     }
+
     .menu {
       display: flex;
     }
+
     .search {
       display: none;
     }
-    .nav-mobile-view {
-      margin-top: 40px;
-    }
+
+    // .nav-mobile-view {
+    //   margin-top: 30px;
+    // }
   }
 }
