--- a/src/Screens/MatchDetails.scss
+++ b/src/Screens/MatchDetails.scss
@@ -1,21 +1,173 @@
 .matchdetails {
-  margin-top: 67px;
+  margin-top: 69px;
   position: absolute;
   width: 100%;
+  // height: 110vh;
   flex-direction: column;
-   background-color: red;
-  max-width: 1900px;
+  background-color: #000;
+  // max-width: 2100px;
   display: flex;
   align-items: center;
+
   @media (max-width: 1024px) {
     margin-top: 69px;
   }
-  .match-header{
-    height: 250px;
-    background-color:yellow;
-    // align-items: center;
-    // display: flex;
-    // justify-content: center;
-    width:50%
+
+  .match-header-details {
+    height: 300px;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+
+    .match-data {
+      width: 50%;
+      // background-color: red;
+
+      .match-type {
+        height: 20%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        // padding: 15px;
+        color: #ffff;
+      }
+
+      .match-details-section {
+        height: 65%;
+
+        .match-middle {
+          width: 100%;
+          margin: auto;
+          height: 100%;
+          flex-direction: row;
+          display: flex;
+          justify-content: space-between;
+        }
+
+        .left-team {
+          .top-view {
+            flex-direction: row;
+            display: flex;
+            align-items: center;
+          }
+
+          .hometeam-logo {
+            height: 80px;
+            width: 130px;
+            border-radius: 5px;
+            margin-right: 10px;
+          }
+
+          .team-name {
+            color: #fff;
+          }
+
+          .scored-section-team-a {
+            margin: 20px auto;
+            color: #fff;
+
+            .scored {
+              flex-direction: row;
+              display: flex;
+              padding: 10px 0 10px 0;
+              font-size: 30px;
+            }
+
+            .over-text {
+              margin-top: 5px;
+              color: #fff;
+              font-size: 20px;
+              color: grey;
+            }
+          }
+        }
+
+        .right-team {
+          .top-view {
+            flex-direction: row;
+            display: flex;
+            align-items: center;
+          }
+
+          .hometeam-logo {
+            height: 80px;
+            width: 130px;
+            border-radius: 5px;
+          }
+
+          .team-name {
+            color: #fff;
+            margin-right: 10px;
+          }
+
+          .scored-section-team-b {
+            margin: 20px auto;
+            color: #fff;
+            text-align: end;
+
+            .scored {
+              flex-direction: row;
+              display: flex;
+              text-align: end;
+              justify-content: flex-end;
+              padding: 10px 0 10px 0;
+              font-size: 30px;
+            }
+
+            .over-text {
+              margin-top: 5px;
+              color: grey;
+              font-size: 20px;
+            }
+          }
+        }
+      }
+
+      .middle {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .middle-line {
+          position: absolute;
+          height: 120px;
+          width: 1px;
+          background-color: grey;
+        }
+
+        p {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 25px;
+          width: 25px;
+          border-radius: 50%;
+          background-color: #fff;
+          color: #000;
+          font-size: 13px;
+          font-weight: 700;
+          z-index: 1000;
+        }
+      }
+
+      .result-text {
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        height: 15%;
+        color: #fff;
+        // background-color: red;
+      }
+    }
+  }
+}
+
+@media (max-width: 850px) {
+  .matchdetails{
+    .match-header-details{
+       .match-data{
+        width: 100%;
+       }
+    }
   }
 }
