--- a/src/Screens/MatchDetails.scss
+++ b/src/Screens/MatchDetails.scss
@@ -2,33 +2,29 @@
   margin-top: 69px;
   position: absolute;
   width: 100%;
-  // height: 110vh;
   flex-direction: column;
   background-color: #000;
-  // max-width: 2100px;
   display: flex;
-  align-items: center;
+  // align-items: center;
 
   @media (max-width: 1024px) {
     margin-top: 69px;
   }
 
   .match-header-details {
-    height: 300px;
+    height: 270px;
     width: 100%;
     justify-content: center;
     display: flex;
 
     .match-data {
       width: 50%;
-      // background-color: red;
 
       .match-type {
         height: 20%;
         align-items: center;
         display: flex;
         justify-content: center;
-        // padding: 15px;
         color: #ffff;
       }
 
@@ -44,6 +40,17 @@
           justify-content: space-between;
         }
 
+        .preview-match {
+          width: 100%;
+          margin: auto;
+          height: 100%;
+          flex-direction: row;
+          display: flex;
+          justify-content: space-between;
+          // background-color: yellow;
+          align-items: center;
+        }
+
         .left-team {
           .top-view {
             flex-direction: row;
@@ -52,8 +59,8 @@
           }
 
           .hometeam-logo {
-            height: 80px;
-            width: 130px;
+            height: 70px;
+            // width: 100%;
             border-radius: 5px;
             margin-right: 10px;
           }
@@ -69,15 +76,14 @@
             .scored {
               flex-direction: row;
               display: flex;
-              padding: 10px 0 10px 0;
-              font-size: 30px;
+              padding: 5px 0 5px 0;
+              font-size: 25px;
             }
 
             .over-text {
               margin-top: 5px;
-              color: #fff;
-              font-size: 20px;
               color: grey;
+              font-size: 20px;
             }
           }
         }
@@ -90,12 +96,13 @@
           }
 
           .hometeam-logo {
-            height: 80px;
-            width: 130px;
+            height: 70px;
+            // width: 100%;
             border-radius: 5px;
           }
 
           .team-name {
+            text-align: end;
             color: #fff;
             margin-right: 10px;
           }
@@ -110,8 +117,8 @@
               display: flex;
               text-align: end;
               justify-content: flex-end;
-              padding: 10px 0 10px 0;
-              font-size: 30px;
+              padding: 5px 0 5px 0;
+              font-size: 25px;
             }
 
             .over-text {
@@ -121,6 +128,9 @@
             }
           }
         }
+      }
+      .result-text{
+        text-align: center;
       }
 
       .middle {
@@ -156,18 +166,151 @@
         display: flex;
         height: 15%;
         color: #fff;
-        // background-color: red;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .matchdetails {
+    .match-header-details {
+      .match-data {
+        width: 60%;
       }
     }
   }
 }
 
 @media (max-width: 850px) {
-  .matchdetails{
-    .match-header-details{
-       .match-data{
-        width: 100%;
-       }
+  .matchdetails {
+    .match-header-details {
+      height: 250px;
+
+      .match-data {
+        width: 75%;
+
+        .match-type {
+          height: 25%;
+          align-items: center;
+          display: flex;
+          justify-content: center;
+          color: #ffff;
+        }
+
+        .match-details-section {
+          height: 60%;
+
+          .left-team {
+            .hometeam-logo {
+              height: 50px;
+              width: 90px;
+              border-radius: 5px;
+              margin-right: 10px;
+            }
+
+            .scored-section-team-a {
+              .scored {
+                padding: 0;
+                font-size: 20px;
+              }
+
+              .over-text {
+                color: #fff;
+                font-size: 17px;
+                color: grey;
+              }
+            }
+          }
+
+          .right-team {
+            .hometeam-logo {
+              height: 50px;
+              width: 90px;
+              border-radius: 5px;
+            }
+
+            .scored-section-team-b {
+              .scored {
+                padding: 0;
+                font-size: 20px;
+              }
+
+              .over-text {
+                margin-top: 5px;
+                color: grey;
+                font-size: 17px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .matchdetails {
+    .match-header-details {
+      height: 230px;
+
+      .match-data {
+        width: 90%;
+
+        .match-type {
+          height: 25%;
+          align-items: center;
+          display: flex;
+          justify-content: center;
+          color: #ffff;
+        }
+
+        .match-details-section {
+          height: 60%;
+
+          .left-team {
+            .hometeam-logo {
+              height: 40px;
+              width: 70px;
+              border-radius: 5px;
+              margin-right: 10px;
+            }
+
+            .scored-section-team-a {
+              .scored {
+                padding: 0;
+                font-size: 20px;
+              }
+
+              .over-text {
+                color: #fff;
+                font-size: 17px;
+                color: grey;
+              }
+            }
+          }
+
+          .right-team {
+            .hometeam-logo {
+              height: 40px;
+              width: 70px;
+              border-radius: 5px;
+            }
+
+            .scored-section-team-b {
+              .scored {
+                padding: 0;
+                font-size: 20px;
+              }
+
+              .over-text {
+                margin-top: 5px;
+                color: grey;
+                font-size: 17px;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
