create score and player section

--- a/src/Components/Players/Player.scss
+++ b/src/Components/Players/Player.scss
@@ -8,25 +8,25 @@
         height: 25px;
         align-items: center;
         .team-a{
-            height: 30px;
-            width: 120px;
-            background-color: #000;
+            height: 20px;
+            // width: 140px;
+            background-color: #fff;
             align-items: center;
             justify-content: center;
             display: flex;
             padding: 10px;
             border-radius: 10px;
-            color: #fff;
+            color: #000;
         }
         .team-b{
-            height: 30px;
-            background-color: #000;
+            height: 20px;
+            background-color: #fff;
             align-items: center;
             justify-content: center;
             display: flex;
             padding: 10px;
             border-radius: 10px;
-            color: #fff;
+            color: #000;
         }
     }
     .team-Player{
@@ -35,26 +35,45 @@
         margin-top: 40px;
         // height: 25px;
         align-items: center;
-        .team-a-player{
-            height: 30px;
-            // width: 120px;
-            background-color: #000;
-            align-items: center;
-            justify-content: center;
+        .home-team {
             display: flex;
-            padding: 10px;
-            border-radius: 10px;
-            color: #fff;
-        }
-        .team-b-player{
-            height: 30px;
-            background-color: #000;
-            align-items: center;
-            justify-content: center;
+            // padding: 20px;
+            // margin-left: 20px;
+            flex-direction: column;
+            width: 45%;
+            gap: 10px;
+            .player-details {
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+              gap: 20px;
+              img {
+                width: 40px;
+              }
+              p {
+                font-weight: 600;
+                color: #fff;
+              }
+            }
+          }
+          .away-team {
             display: flex;
-            padding: 10px;
-            border-radius: 10px;
-            color: #fff;
-        }
+            flex-direction: column;
+            width: 45%;
+            gap: 10px;
+            .player-details {
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              gap: 20px;
+              img {
+                width: 40px;
+              }
+              p {
+                font-weight: 600;
+                color: #fff;
+              }
+            }
+          }
     }
 }
