--- a/src/Screens/MatchDetailsData.scss
+++ b/src/Screens/MatchDetailsData.scss
@@ -3,11 +3,15 @@
   display: flex;
   height: 110vh;
   .main-details {
-    background-color: #1d1e1f;
+    background-color: #000;
     width: 50%;
     height: 100%;
     justify-content: space-between;
     display: flex;
+    // border-top: 1px solid grey;
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;
+    border-left: 1px solid grey;
     // padding: 0 10px 0 10px;
     // color: pink;
     .matchinfo-page{
@@ -54,7 +58,7 @@
 @media (max-width: 850px) {
   .MatchDetailsData {
     .main-details {
-      width: 75%;
+      width: 100%;
     }
   }
 }
@@ -63,6 +67,14 @@
   .MatchDetailsData {
     .main-details {
       width: 100%;
+      .matchinfo-page{
+        padding: 15px;
+        .data-section{
+          justify-content: space-between;
+          // background-color: red;
+          word-break: break-all;
+        }
+      }
     }
   }
 }
