--- a/src/Screens/MatchDetailsData.scss
+++ b/src/Screens/MatchDetailsData.scss
@@ -1,7 +1,7 @@
 .MatchDetailsData {
   justify-content: center;
   display: flex;
-  height: 110vh;
+  // height: 1660px;
   .main-details {
     background-color: #000;
     width: 50%;
