--- a/src/Screens/MatchDetails.scss
+++ b/src/Screens/MatchDetails.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   background-color: #000;
   display: flex;
+  min-height: 100vh;
   // align-items: center;
 
   @media (max-width: 1024px) {
