--- a/src/Components/Commentry/Commentry.scss
+++ b/src/Components/Commentry/Commentry.scss
@@ -68,6 +68,17 @@
       border-radius: 60%;
       background-color: #1d1e1f;
     }
+    .wide {
+      color: #000;
+      height: 30px;
+      width: 30px;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      border-radius: 60%;
+      background-color: #fff;
+      font-size: 12px;
+    }
     .zero {
       color: #fff;
       height: 30px;
