--- a/src/Screens/MatchDetailsData.scss
+++ b/src/Screens/MatchDetailsData.scss
@@ -50,6 +50,7 @@
           display: flex;
           justify-content: space-between;
           flex-direction: row;
+          margin-bottom:10px
         }
         .team-b {
           // background-color:red;
@@ -120,6 +121,37 @@
             width: 67%;
             .runs{
               width: 20px;
+            }
+          }
+        }
+        .line{
+          height:1px;
+          width: 100%;
+          // border: 1px solid 'red';
+          margin-top: 10px;
+          opacity: 0.4;
+          background-color: #000
+        }
+        .score-info{
+          // background-color: green;
+          margin-top:25px;
+          .run-score{
+            // background-color:red;
+            padding-top:10px;
+          }
+          .fall-wickets{
+            // background-color:yellow;
+            display:flex;
+            align-items:center;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            .icon{
+              margin-left:10px
+            }
+          }
+          .wickets-records{
+            .wickets-rec{
+               padding-top:10px
             }
           }
         }
