--- a/src/Screens/MatchDetailsData.scss
+++ b/src/Screens/MatchDetailsData.scss
@@ -3,7 +3,7 @@
   display: flex;
   // height: 1660px;
   .main-details {
-    background-color: grey;
+    background-color: #000;
     width: 50%;
     height: 100%;
     justify-content: space-between;
@@ -50,7 +50,8 @@
           display: flex;
           justify-content: space-between;
           flex-direction: row;
-          margin-bottom:10px
+          margin-bottom:10px;
+          color: #fff;
         }
         .team-b {
           // background-color:red;
@@ -58,6 +59,7 @@
           display: flex;
           justify-content: space-between;
           flex-direction: row;
+          color: #fff;
         }
         .score-head {
           flex-direction: row;
@@ -65,8 +67,9 @@
           margin-top: 15px;
           display: flex;
           justify-content: space-between;
-          background-color: pink;
+          background-color: grey;
           align-items: center;
+          color: white;
           .score-header {
             // background-color: green;
             flex-direction: row;
@@ -76,6 +79,7 @@
             padding: 10px;
             align-items: center;
             justify-content: space-between;
+            color: #fff;
           }
         }
       }
@@ -90,6 +94,7 @@
           width: 100%;
           align-items: center;
           padding-top: 10px;
+          color: white;
           .player-name {
             width: 45%;
             // padding: 10px;
@@ -101,6 +106,7 @@
             display: flex;
             align-items: center;
             // text-align: end;
+            color: white;
             gap: 10px;
             .player {
               // background-color:pink;
@@ -108,7 +114,8 @@
               .status-out {
                 //  background-color:green;
                 font-size: 14px;
-                color: beige;
+                color: grey;
+                margin-top: 5px;
               }
             }
           }
@@ -119,6 +126,7 @@
             overflow: hidden;
             justify-content: space-between;
             width: 67%;
+            color: white;
             .runs{
               width: 20px;
             }
@@ -136,6 +144,7 @@
           // background-color: green;
           margin-top:25px;
           .run-score{
+            color: white;
             // background-color:red;
             padding-top:10px;
           }
@@ -145,13 +154,15 @@
             align-items:center;
             margin-top: 10px;
             margin-bottom: 10px;
+            color: #fff;
             .icon{
               margin-left:10px
             }
           }
           .wickets-records{
             .wickets-rec{
-               padding-top:10px
+               padding-top:10px;
+               color: #fff
             }
           }
         }
