--- a/src/Components/Commentry/Commentry.scss
+++ b/src/Components/Commentry/Commentry.scss
@@ -117,6 +117,11 @@
       align-items: center;
       display: flex;
       line-height: 1.4;
+      .ball-time{
+        color: grey;
+        text-align: end;
+        font-size: 11px;
+      }
     }
   }
 }
