--- a/src/Screens/MatchDetails.scss
+++ b/src/Screens/MatchDetails.scss
@@ -7,6 +7,11 @@
   display: flex;
   min-height: 100vh;
   // align-items: center;
+  .first{
+    // background-color: pink;
+    width: 25%;
+    color: white;
+  }
 
   @media (max-width: 1024px) {
     margin-top: 69px;
@@ -20,6 +25,7 @@
 
     .match-data {
       width: 50%;
+      // background-color: red;
 
       .match-type {
         height: 20%;
